<resources>
    <string name="app_name">Tasker</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="signUp">Sign up.</string>
    <string name="login">Login</string>
    <string name="auth_failed">Authentication failed!</string>

    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_register">Register</string>
    <string name="use_social">Use your social accounts</string>
    <string name="required">Required</string>
    <string name="password_must_match">Passwords must match</string>
    <string name="reg_failed">Register failed</string>
    <string name="password_size">Password must have 6 characters</string>
    <string name="emailNotVerified">Email not verified</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new">Create new</string>
    <string name="list_all_items">All</string>
    <string name="archived">Archived</string>
    <string name="shared">Shared</string>
    <string name="user">User</string>
    <string name="user_account">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="user_not_confirmed">User not confirmed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_verification_sent">Email verification sent!</string>
    <string name="add_note">Add new note</string>
    <string name="add_reminder">Add new reminder</string>
    <string name="add_checklist">Add new checklist</string>
    <string name="add_new_tasker">Tasker creator</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="importance">importance</string>
    <string name="reminder">reminder</string>
    <string name="add_location">Add location</string>
    <string name="remove_location">Remove location</string>
    <string name="sharing_groups">sharing groups</string>
    <string name="add_user">Add user</string>
    <string name="enable">Enable</string>
    <string name="is_mandatory">mandatory field</string>
    <string name="add_item">+ add item</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="error_time_is_needed">Time is needed for reminder</string>
    <string name="success">Success</string>
    <string name="delete">delete</string>
    <string name="editLow">edit</string>
    <string name="enter_location">Enter a address, place or business</string>
    <string name="logout">logout</string>
    <string name="logoutText">Logout user from system</string>
    <string name="action_settings_2">Settings_2</string>
</resources>
