<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context="com.isep.tasker.tasker.Fragments.AddReminderFragment">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:focusedByDefault="true"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:windowSoftInputMode="stateAlwaysVisible" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnSubmit"
            android:layout_below="@+id/top"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="160">
                    <EditText
                        android:id="@+id/etDescriptio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:nestedScrollingEnabled="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_shaper"
            android:text="@string/submit" />


    </RelativeLayout>