<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context="com.isep.tasker.tasker.Fragments.NoteSettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/importance" />

        <Spinner
            android:id="@+id/spnImportance"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center|left"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/reminder" />

            <Switch
                android:id="@+id/switchReminder"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center|left"
                android:layout_gravity="left"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reminderDates"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <AutoCompleteTextView
            android:id="@+id/adressAutoLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            android:inputType="text" />

        <Button
            android:id="@+id/btnAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            android:background="@drawable/inner_button_shaper"
            android:text="@string/add_location" />

        <ScrollView
            android:id="@+id/lstLocationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/lstLocations"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </ListView>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center|left"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/sharing_groups" />

            <Switch
                android:id="@+id/switchUser"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center|left"
                android:layout_gravity="left"
                android:layout_weight="1" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/sharing1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_weight="1"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/userAutoLocation"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sharing2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/inner_button_shaper"
                android:layout_weight="1"
                android:text="@string/add_user" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/sharing3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/lstUsers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </ListView>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</RelativeLayout>
